Changelog
=========

4.3-dev - (unreleased)
----------------------

4.2 - (2012-07-13)
------------------
* Feature: Updated PIL dependency with Pillow
  [voineali]

4.1 - (2011-11-18)
------------------
* Rerelease broken egg  

4.0 - (2011-11-18)
------------------
* Bug fix: added views registered for default image thumbnail sizes; 
  allows plone filters to properly retrieve the image from html text links [tiberich #4651]
* Feature: added a interface mapping fallback for our simile exhibit daviz product. 
  [demarant]
* Bug fix: fixed a bug with atfield adapter not properly dealing with broken
  blobs [tiberich]
* Bug fix: fixed a bug with the traverser being triggered for atct_image_transform
 [tiberich]
* Bug fix: Plone4 compatibility
  [tiberich]
* Bug fix: Fixed pylint/pyflakes warrnings
  [ghicaale]
* Change: Restructured package to work with
  plone.app.imaging instead of overriding it
  [tiberich #4284]
* Change: return the whole image when it's not possible to return
  a scale in imgview for folders and fields
  [tiberich #4374]
* Feature: Added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [tiberich #4284]

0.7 - (2011-03-28)
------------------
* Bug fix: Added translation domain to ZCML files
  [voineali #4139]
* Bug fix: Return the field when traversing to /image in traverser
  [tiberich #4135]

0.6 - (2011-02-17)
----------------------
* Bug fix: Use try/except in display method to avoid errors
  when blobs are missing
  [tiberich]

0.5 - (2011-01-26)
------------------
* Feature: Added JPEG to known formats for thumbnails
  [voineali #3847]

0.4 - (2010-05-17)
------------------
* Bug fix: Fixed "typo" in fallback interfaces map.
  [pthulin]

0.3 - (2010-05-07)
------------------
* Feature: Use fallback images to ensure that an image is always returned.
  [pthulin]

0.2.1 - (2010-01-18)
--------------------
* Cleanup: Removed empty skin folder

0.2 - (2010-01-18)
------------------